<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_irb140_apps</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="v248206@dac.unicamp.br">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>gz_transport_vendor</depend>
</package>
