<?xml version="1.0"?>
<package format="3">

  <name>abb_irb140_support</name>
  <version>1.0.0</version>

  <description>
    ABB IRB140 robot description package for ROS2.
  </description>

  <maintainer email="student@example.com">
    student
  </maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
